# MNN

./: run_build.sh
demo/cpp/: CMakeLists.txt  util.cpp  util.h  yolo.h  yolov5.cpp  yolov8_demo.cpp
demo/python/: run_example.sh
